--- a/h5.html
+++ b/h5.html
@@ -341,7 +341,7 @@ document.getElementById('contact').addEventListener('click', () => {
 });
 // Casino button - Coming Soon popup
 document.getElementById('casino').addEventListener('click', () => {
-  window.location.href = "./casino";
+  window.location.href = "https://d9ts.github.io/Reasoner-Casino/casino/index.php";
 
 });
 
