--- a/h5.html
+++ b/h5.html
@@ -226,7 +226,7 @@
 
     // Casino button
     document.getElementById('casino').addEventListener('click', () => {
-      window.location.href = "./casino.html";
+      window.location.href = "https://d9ts.github.io/Reasoner-Casino-2";
     });
   </script>
 </body>
