--- a/h5.html
+++ b/h5.html
@@ -225,9 +225,9 @@
     });
 
     // Casino button
-    document.getElementById('casino').addEventListener('click', () => {
-      window.location.href = "https://d9ts.github.io/Reasoner-Casino-2";
-    });
+   document.getElementById('casino').addEventListener('click', () => {
+  alert("🎰 To access the Casino, copy & paste this link into your browser:\n\nhttps://d9ts.github.io/Reasoner-Casino-2");
+});
   </script>
 </body>
 </html>
