--- a/index.html
+++ b/index.html
@@ -1,142 +1,273 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<!-- Mirrored from welfare.pw/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 12 Sep 2025 17:31:58 GMT -->
+<html lang="zh-CN">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Data Revolt</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Reasoner Casino</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       margin: 0;
-      padding: 0;
-      /*background: #ccc;*/
+      font-family: sans-serif;
       display: flex;
       align-items: center;
       justify-content: center;
       height: 100vh;
-      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+      background: #f0f0f0;
     }
 
-    .phone-frame {
-      width: 390px;
-      height: 844px;
-      border: 14px solid #333;
-      border-radius: 50px;
-      overflow: hidden;
-      /*background: #000;*/
-      box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
-      position: relative;
+    #app {
+      width: 320px;
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+      text-align: center;
     }
 
-    .status-bar {
-      height: 44px;
-      background: rgb(26, 26, 26);
-      color: #fff;
-      font-size: 12px;
-      padding: 0 24px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-        font-weight: 600;
+    .button-container {
+      display: none;
+      flex-wrap: wrap;
+      gap: 12px;
+      justify-content: center;
+      margin-top: 20px;
     }
 
-    .status-left, .status-right {
-      display: flex;
-      align-items: center;
-      gap: 6px;
-    }
-    .status-left{
-        font-size: 16px;
-    }
-
-    .iframe-container {
-      width: 100%;
-      height: calc(100% - 64px); /* 除去状态栏高度 */
-    }
-
-    iframe {
-      width: 100%;
-      height: 100%;
+    .button-container button {
+      padding: 12px 20px;
+      font-size: 14px;
       border: none;
-      display: block;
+      border-radius: 8px;
+      cursor: pointer;
+      background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+      color: white;
+      transition: transform 0.2s, box-shadow 0.2s;
+      flex: 1 1 45%;
+      min-width: 100px;
     }
 
-    .notch {
-      width: 150px;
-        height: 44px;
-      background: #333;
-      border-radius: 0 0 20px 20px;
-      position: absolute;
-      top: -14px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 10;
+    .button-container button:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 6px 12px rgba(0,0,0,0.2);
     }
-    .bottom-padding {
-  width: 100%;
-  height: 20px; /* 可根据圆角大小调整 */
-  background: #1e2427;
-}
+
+    input, input[type="submit"] {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 10px;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
+
+    input[type="submit"] {
+      background: #448;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+      font-size: 16px;
+    }
+
+    input[type="submit"]:hover {
+      background: #336;
+    }
+
+    /* Promo banner styling */
+    .promo-banner {
+      background: linear-gradient(90deg, #ff0055, #ffcc00);
+      color: white;
+      font-size: 16px;
+      font-weight: bold;
+      padding: 10px;
+      margin-bottom: 15px;
+      border-radius: 8px;
+      text-align: center;
+      display: none; /* hidden by default */
+    }
+
+    .promo-banner .claim-btn {
+      display: inline-block;
+      margin-top: 8px;
+      padding: 6px 12px;
+      background: white;
+      color: #ff0055;
+      font-weight: bold;
+      border-radius: 5px;
+      text-decoration: none;
+      cursor: pointer;
+    }
+
+    .promo-banner .claim-btn:hover {
+      background: #ffe066;
+      color: #ff0055;
+    }
   </style>
 </head>
 <body>
+  <noscript><strong>Please enable JavaScript to continue.</strong></noscript>
+
+  <div id="app">
+    <h2>Reasoner Casino</h2>
+
+
+
+    <!-- Registration Form -->
+    <form id="signupForm">
+      <input type="text" placeholder="Username" required>
+      <input type="email" placeholder="Email" required>
+      <input type="password" placeholder="Password" required>
+      <input type="submit" value="Sign Up">
+    </form>
+
+    <!-- Button Panel (hidden initially) -->
+    <div class="button-container">
+      <button id="casino">Casino</button>
+      <button id="withdraw">Withdraw</button>
+      <button id="contact">Contact Us</button>
+      <button id="topup">Top Up</button>
+    </div>
+  </div>
+
   <script>
-    const isMobile = /Android|iPhone|iPad|iPod|iOS/i.test(navigator.userAgent);
+    // Registration form submission
+    document.getElementById('signupForm').addEventListener('submit', function(e){
+      e.preventDefault();
+      const form = e.target;
+      form.style.display = 'none';
 
-    if (isMobile) {
-      // 手机访问，直接跳转
-      window.location.href = 'h5.html'; // 替换为你的 H5 地址
-    } else {
-      // PC 端模拟手机
-      const frame = document.createElement('div');
-      frame.className = 'phone-frame';
+      // Show button panel
+      const buttons = document.querySelector('.button-container');
+      buttons.style.display = 'flex';
 
-      // 顶部状态栏
-      const statusBar = document.createElement('div');
-      statusBar.className = 'status-bar';
-      statusBar.innerHTML = `
-        <div class="status-left" id="current-time">--:--</div>
-        <div class="status-right">
-          <span>📶</span>
-          <span>📡</span>
-          <span>🔋</span>
-        </div>
-      `;
+      // Show promo banner after login
+      const promoBanner = document.querySelector('.promo-banner');
+      promoBanner.style.display = 'block';
+    });
 
-      // 顶部刘海 notch
-      const notch = document.createElement('div');
-      notch.className = 'notch';
+    // Top Up button with Litecoin modal
+    const cryptoList = [
+      {name: 'Bitcoin', symbol: 'BTC', address: 'bc1qwd2vj4nql2jyfsd2mtx63uqzc7uujgsntkskw4', logo: 'https://assets.coingecko.com/coins/images/1/large/bitcoin.png'},
+      {name: 'Litecoin', symbol: 'LTC', address: 'LQ3hyvBUV89TJi1weJzaFceetUk27LqBPT', logo: 'https://assets.coingecko.com/coins/images/2/large/litecoin.png'},
+      {name: 'Ethereum', symbol: 'ETH', address: '0x5560d23927e7730aa9DEa1F342194Eff5e28d4a5', logo: 'https://assets.coingecko.com/coins/images/279/large/ethereum.png'},
+      {name: 'Tether', symbol: 'USDT', address: '0x5560d23927e7730aa9DEa1F342194Eff5e28d4a5', logo: 'https://assets.coingecko.com/coins/images/325/large/Tether-logo.png'},
+      {name: 'Solana', symbol: 'SOL', address: 'GATh1X7JBwGg3vj6srN6bcuGKffMy2Ya58VMzoZgssQd', logo: 'https://assets.coingecko.com/coins/images/4128/large/solana.png'},
+      {name: 'USD Coin', symbol: 'USDC', address: '0x5560d23927e7730aa9DEa1F342194Eff5e28d4a5', logo: 'https://assets.coingecko.com/coins/images/6319/large/USD_Coin_icon.png'}
+    ];
 
-      // iframe 内容
-      const container = document.createElement('div');
-      container.className = 'iframe-container';
-      const iframe = document.createElement('iframe');
-      iframe.src = 'h5.html';
-      container.appendChild(iframe);
-      // ⬇️ 加入底部占位层
-const padding = document.createElement('div');
-padding.className = 'bottom-padding';
-container.appendChild(padding);
+    // Top Up button
+    document.getElementById('topup').addEventListener('click', () => {
+      const modal = document.createElement('div');
+      modal.style.position = 'fixed';
+      modal.style.top = 0;
+      modal.style.left = 0;
+      modal.style.width = '100%';
+      modal.style.height = '100%';
+      modal.style.background = 'rgba(0,0,0,0.6)';
+      modal.style.display = 'flex';
+      modal.style.alignItems = 'center';
+      modal.style.justifyContent = 'center';
+      modal.style.zIndex = 9999;
 
-      // 拼接结构
-      frame.appendChild(notch);
-      frame.appendChild(statusBar);
-      frame.appendChild(container);
-      document.body.appendChild(frame);
+      const box = document.createElement('div');
+      box.style.background = '#fff';
+      box.style.padding = '20px';
+      box.style.borderRadius = '12px';
+      box.style.textAlign = 'center';
+      box.style.width = '320px';
+      box.style.maxHeight = '80vh';
+      box.style.overflowY = 'auto';
+      box.style.boxShadow = '0 4px 15px rgba(0,0,0,0.2)';
 
-      // 更新时间显示
-      function updateTime() {
-        const now = new Date();
-        const hours = String(now.getHours()).padStart(2, '0');
-        const minutes = String(now.getMinutes()).padStart(2, '0');
-        document.getElementById('current-time').textContent = `${hours}:${minutes}`;
-      }
-      updateTime();
-      setInterval(updateTime, 60000); // 每分钟更新一次
-    }
+      box.innerHTML = `<h3>Top Up Cryptocurrency</h3>`;
+      cryptoList.forEach(crypto => {
+        const cryptoDiv = document.createElement('div');
+        cryptoDiv.style.margin = '15px 0';
+        cryptoDiv.style.display = 'flex';
+        cryptoDiv.style.flexDirection = 'column';
+        cryptoDiv.style.alignItems = 'center';
+        cryptoDiv.innerHTML = `
+          <img src="${crypto.logo}" alt="${crypto.name}" style="width:50px; height:50px; margin-bottom:8px;">
+          <strong>${crypto.name}</strong>
+          <p style="word-break: break-all; margin:5px 0;">${crypto.address}</p>
+          <button class="confirmTopupBtn" style="padding:8px 15px; border:none; border-radius:8px; background:#448; color:#fff; cursor:pointer;">I've Sent ${crypto.symbol}</button>
+        `;
+        box.appendChild(cryptoDiv);
+      });
+
+      const closeBtn = document.createElement('button');
+      closeBtn.textContent = 'Close';
+      closeBtn.style.marginTop = '15px';
+      closeBtn.style.padding = '8px 15px';
+      closeBtn.style.border = 'none';
+      closeBtn.style.borderRadius = '8px';
+      closeBtn.style.background = '#ccc';
+      closeBtn.style.color = '#000';
+      closeBtn.style.cursor = 'pointer';
+      closeBtn.addEventListener('click', () => document.body.removeChild(modal));
+
+      box.appendChild(closeBtn);
+      modal.appendChild(box);
+      document.body.appendChild(modal);
+
+      box.querySelectorAll('.confirmTopupBtn').forEach((btn, idx) => {
+        btn.addEventListener('click', () => {
+          const crypto = cryptoList[idx];
+          setTimeout(() => {
+            const receivedAmount = 0.5;
+            alert(`${crypto.symbol} Transaction confirmed!\nReceived: ${receivedAmount} ${crypto.symbol}`);
+            if(!window.userBalance) window.userBalance = {};
+            if(!window.userBalance[crypto.symbol]) window.userBalance[crypto.symbol] = 0;
+            window.userBalance[crypto.symbol] += receivedAmount;
+            alert(`Your new ${crypto.symbol} balance: ${window.userBalance[crypto.symbol]} ${crypto.symbol}`);
+          }, 1500);
+          document.body.removeChild(modal);
+        });
+      });
+    });
+
+    // Casino button
+// Casino button - Normal popup
+document.getElementById('casino').addEventListener('click', () => {
+  // Create modal background
+  const modal = document.createElement('div');
+  modal.style.position = 'fixed';
+  modal.style.top = 0;
+  modal.style.left = 0;
+  modal.style.width = '100%';
+  modal.style.height = '100%';
+  modal.style.background = 'rgba(0,0,0,0.6)';
+  modal.style.display = 'flex';
+  modal.style.alignItems = 'center';
+  modal.style.justifyContent = 'center';
+  modal.style.zIndex = 9999;
+
+  // Create popup box
+  const box = document.createElement('div');
+  box.style.background = '#fff';
+  box.style.padding = '20px';
+  box.style.borderRadius = '12px';
+  box.style.textAlign = 'center';
+  box.style.width = '300px';
+  box.style.boxShadow = '0 4px 15px rgba(0,0,0,0.2)';
+
+  // Add content
+  box.innerHTML = `
+    <h3>Casino Access</h3>
+    <p>Please copy & paste this link into your browser:</p>
+    <p style="font-weight:bold; color:#2575fc; word-break:break-all;">
+      https://d9ts.github.io/Reasoner-Casino-2
+    </p>
+    <button id="closeCasino" style="margin-top:15px; padding:8px 15px; border:none; border-radius:8px; background:#ccc; cursor:pointer;">Close</button>
+  `;
+
+  modal.appendChild(box);
+  document.body.appendChild(modal);
+
+  // Close button
+  document.getElementById('closeCasino').addEventListener('click', () => {
+    document.body.removeChild(modal);
+  });
+});
+
   </script>
 </body>
-
-<!-- Mirrored from welfare.pw/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 12 Sep 2025 17:31:58 GMT -->
 </html>
