--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     <!-- Button Panel (hidden initially) -->
     <div class="button-container">
-      <button id="casino">Casino</button>
+      <button id="casino">Casinos</button>
       <button id="withdraw">Withdraw</button>
       <button id="contact">Contact Us</button>
       <button id="topup">Top Up</button>
